Set min width to prevent overlap

--- a/src/components/commentForm/commentForm.scss
+++ b/src/components/commentForm/commentForm.scss
@@ -8,7 +8,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
-    width: 80%;
+    min-width: fit-content;
+    width: 90%;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;    
     border-radius: 15px;
     padding: 15px;
